[gd_scene load_steps=12 format=3 uid="uid://mskcwn1a1v6d"]

[ext_resource type="Script" uid="uid://3r2syidagjkl" path="res://code/player_controller_third_person_4.4.gd" id="1_qhqgy"]
[ext_resource type="PackedScene" uid="uid://dt25utof4dlt" path="res://common/art/meshes/skeletalmesh_player/skeletalmesh_player.tscn" id="2_6a8wd"]
[ext_resource type="Script" uid="uid://dwcvdo5bjrksn" path="res://code/player_interact.gd" id="3_ctvvl"]
[ext_resource type="PackedScene" uid="uid://b8b6q7g4bsaw5" path="res://common/ui/pause_menu/pause_menu.tscn" id="4_dqkch"]
[ext_resource type="Script" uid="uid://ui8nenucifea" path="res://code/game_ui.gd" id="5_y4r1p"]
[ext_resource type="Texture2D" uid="uid://bjowqfm5dtiv1" path="res://E-Key-Sprite.png" id="6_d2wvv"]
[ext_resource type="Texture2D" uid="uid://b1t65557jgm3q" path="res://F-Key-Sprite.png" id="7_3v2ag"]
[ext_resource type="Texture2D" uid="uid://bqy0drse8s8iq" path="res://Ring-Art.png" id="8_jej6c"]
[ext_resource type="Texture2D" uid="uid://d3v7q0mf4imfj" path="res://common/art/2d/lockpick-center.png" id="9_f1ej7"]
[ext_resource type="Texture2D" uid="uid://dd8c3nt7qnh61" path="res://common/art/2d/lockpick-center-ring.png" id="10_oprun"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s61dn"]
height = 1.74945

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_qhqgy")
SPEED = 1.5
SPRINT_SPEED = 7.0
JUMP_VELOCITY = 12.0
GRAVITY = 50.0
ACCELERATION = 1.0
DECELERATION = 1.0
metadata/_edit_group_ = true

[node name="PlayerArea3D" type="Area3D" parent="." groups=["player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerArea3D"]
shape = SubResource("CapsuleShape3D_s61dn")

[node name="PlayerCollisionShape3D" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135517, 0)
shape = SubResource("CapsuleShape3D_s61dn")

[node name="PlayerVisual" type="Node3D" parent="." groups=["player"]]
unique_name_in_owner = true

[node name="skeletalmesh_player" parent="PlayerVisual" instance=ExtResource("2_6a8wd")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 2.22045e-16, -8.74228e-08, 0, -1, 0.0136029, -0.974175, 0)

[node name="Skeleton3D" parent="PlayerVisual/skeletalmesh_player/Armature" index="0"]
bones/1/position = Vector3(0, 6.15981, -0.505458)
bones/1/rotation = Quaternion(-0.0409256, 0, 0, 0.999162)
bones/2/position = Vector3(5.82077e-11, 7.21059, 2.38419e-07)
bones/2/rotation = Quaternion(-8.56817e-08, -1.4466e-13, 3.53174e-12, 1)
bones/3/position = Vector3(1.70437e-11, 8.24065, 9.53674e-07)
bones/3/rotation = Quaternion(2.6077e-08, 4.23473e-13, -1.03387e-11, 1)
bones/4/position = Vector3(-3.32035e-11, 9.27079, 2.86102e-06)
bones/4/rotation = Quaternion(0.0409257, -4.06917e-20, 6.81266e-12, 0.999162)
bones/5/position = Vector3(-5.82073e-11, 5.13483, 2.10092)
bones/5/rotation = Quaternion(0, -6.33067e-28, -1.31629e-18, 1)
bones/6/position = Vector3(-5.82077e-11, 18.9813, 7.76621)
bones/7/position = Vector3(3.29015, 7.49969, -0.139219)
bones/7/rotation = Quaternion(-0.594849, -0.368814, 0.620752, -0.353268)
bones/8/position = Vector3(-1.84774e-06, 7.39909, 1.18315e-05)
bones/8/rotation = Quaternion(0.267514, 0.226728, -0.0649218, 0.934246)
bones/9/position = Vector3(-5.96046e-06, 20.1168, 4.76837e-06)
bones/9/rotation = Quaternion(-0.0433472, -0.187458, 0.221082, 0.956087)
bones/10/position = Vector3(-6.55651e-06, 27.1453, -8.3223e-06)
bones/10/rotation = Quaternion(0.0397505, -0.109358, 0.000899295, 0.993207)
bones/11/position = Vector3(-1.94577, 1.69948, 0.817218)
bones/11/rotation = Quaternion(0.148683, 0.0481669, 0.304405, 0.939633)
bones/12/position = Vector3(-0.463682, 2.11755, 2.35066e-06)
bones/12/rotation = Quaternion(-0.0408473, -2.21374e-09, -4.01269e-07, 0.999165)
bones/13/position = Vector3(-0.174833, 2.71716, 4.17233e-07)
bones/13/rotation = Quaternion(0.0313542, -1.7832e-07, 3.83428e-07, 0.999508)
bones/14/position = Vector3(0.638519, 2.58445, 1.08033e-05)
bones/15/position = Vector3(-2.85205, 6.89967, -0.0603747)
bones/15/rotation = Quaternion(0.0556567, 0.00589308, 0.105122, 0.992883)
bones/16/position = Vector3(0.0578024, 2.76818, -2.98023e-06)
bones/16/rotation = Quaternion(0.113021, 8.40666e-08, 5.05235e-07, 0.993593)
bones/17/position = Vector3(-0.0114474, 2.60437, -4.41074e-06)
bones/17/rotation = Quaternion(0.0684193, -1.86515e-06, 7.55843e-08, 0.997657)
bones/18/position = Vector3(-0.046353, 2.34754, 6.57886e-06)
bones/19/position = Vector3(-0.847651, 7.12311, -0.158449)
bones/19/rotation = Quaternion(0.0590243, 0.00330149, 0.0557574, 0.996693)
bones/20/position = Vector3(0.0349418, 3.00942, -7.15256e-07)
bones/20/rotation = Quaternion(0.0874989, -4.00141e-07, 2.44712e-07, 0.996165)
bones/21/position = Vector3(-0.00730228, 2.84645, 8.13603e-06)
bones/21/rotation = Quaternion(0.0519408, 1.56487e-06, -3.4657e-07, 0.99865)
bones/22/position = Vector3(-0.0276465, 2.52565, -1.17719e-05)
bones/23/position = Vector3(1.01413, 7.08313, -0.181245)
bones/23/rotation = Quaternion(0.0467491, -0.000423332, -0.00904873, 0.998866)
bones/24/position = Vector3(0.0197428, 2.42531, 3.20375e-06)
bones/24/rotation = Quaternion(0.177131, -1.24803e-06, -2.41362e-07, 0.984187)
bones/25/position = Vector3(-0.0139319, 2.40155, -6.97747e-06)
bones/25/rotation = Quaternion(-0.0391647, 8.31727e-07, -1.61942e-07, 0.999233)
bones/26/position = Vector3(-0.00581372, 2.06296, -4.48525e-06)
bones/27/position = Vector3(2.68559, 6.30481, 0.0466217)
bones/27/rotation = Quaternion(0.0222216, -0.00147478, -0.0661998, 0.997558)
bones/28/position = Vector3(0.00239825, 2.262, -1.8239e-05)
bones/28/rotation = Quaternion(0.208649, -3.62915e-06, -5.19142e-07, 0.977991)
bones/29/position = Vector3(-0.000391006, 1.94131, 4.32134e-06)
bones/29/rotation = Quaternion(0.0175689, 8.16197e-06, 2.97196e-08, 0.999846)
bones/30/position = Vector3(-0.00200629, 1.54633, 3.27826e-07)
bones/31/position = Vector3(-3.29015, 7.50068, -0.151359)
bones/31/rotation = Quaternion(0.593641, -0.369571, 0.621799, 0.352667)
bones/32/position = Vector3(-6.55651e-07, 7.39908, -8.82149e-06)
bones/32/rotation = Quaternion(0.267037, -0.225243, 0.0643445, 0.934781)
bones/33/position = Vector3(-9.53674e-07, 20.1165, 5.48363e-06)
bones/33/rotation = Quaternion(-0.0426088, 0.184738, -0.220668, 0.956746)
bones/34/position = Vector3(6.4373e-06, 27.1379, 3.05474e-07)
bones/34/rotation = Quaternion(0.0411447, 0.099053, -0.00684142, 0.994208)
bones/35/position = Vector3(2.11308, 1.87387, 0.854817)
bones/35/rotation = Quaternion(0.143825, -0.0446196, -0.292922, 0.944204)
bones/36/position = Vector3(0.545173, 2.29682, 4.62309e-06)
bones/36/rotation = Quaternion(-0.0658926, 7.77015e-08, 5.13343e-07, 0.997827)
bones/37/position = Vector3(0.143321, 2.62704, 2.47359e-06)
bones/37/rotation = Quaternion(0.000232769, 1.1595e-06, -2.14204e-07, 1)
bones/38/position = Vector3(-0.688476, 2.31271, 5.96046e-08)
bones/39/position = Vector3(2.92114, 6.87966, -0.0659066)
bones/39/rotation = Quaternion(0.0409935, -0.00359866, -0.0873817, 0.995325)
bones/40/position = Vector3(-0.0571038, 2.79891, 1.19209e-06)
bones/40/rotation = Quaternion(0.126453, -1.39855e-06, -5.57837e-07, 0.991973)
bones/41/position = Vector3(0.0206873, 2.58037, -6.31809e-06)
bones/41/rotation = Quaternion(0.0338155, 2.8262e-06, 1.66191e-07, 0.999428)
bones/42/position = Vector3(0.0364098, 2.33701, 1.35601e-06)
bones/43/position = Vector3(0.860201, 7.14024, -0.0810277)
bones/43/rotation = Quaternion(0.0390184, -0.00174925, -0.0447645, 0.998234)
bones/44/position = Vector3(-0.0483326, 3.06741, 1.81794e-06)
bones/44/rotation = Quaternion(0.102142, 6.45055e-07, -5.9801e-08, 0.99477)
bones/45/position = Vector3(0.00524175, 2.84149, -2.563e-06)
bones/45/rotation = Quaternion(0.0846355, -6.93413e-07, -9.89589e-08, 0.996412)
bones/46/position = Vector3(0.043079, 2.63247, 3.39746e-06)
bones/47/position = Vector3(-1.00771, 7.25194, -0.169254)
bones/47/rotation = Quaternion(0.0513628, 0.000881753, 0.0171229, 0.998533)
bones/48/position = Vector3(-0.0209831, 2.42972, 2.99141e-06)
bones/48/rotation = Quaternion(0.174941, 2.66983e-07, 3.12653e-07, 0.984579)
bones/49/position = Vector3(0.0188833, 2.33027, 4.69759e-06)
bones/49/rotation = Quaternion(-0.0741352, -3.12761e-06, 3.08184e-08, 0.997248)
bones/50/position = Vector3(0.00210088, 1.9219, 2.6077e-06)
bones/51/position = Vector3(-2.77362, 6.47113, -0.0441563)
bones/51/rotation = Quaternion(0.0517994, 0.00339178, 0.0652684, 0.996517)
bones/52/position = Vector3(-0.00660396, 2.09935, 1.36793e-05)
bones/52/rotation = Quaternion(0.183374, 3.59865e-06, 2.4188e-07, 0.983043)
bones/53/position = Vector3(0.00598931, 1.84325, -2.11596e-06)
bones/53/rotation = Quaternion(-0.0859786, -8.04382e-07, -4.456e-07, 0.996297)
bones/54/position = Vector3(0.00061202, 1.48938, -1.07288e-06)
bones/55/position = Vector3(9.35419, -3.41341, 0.311257)
bones/55/rotation = Quaternion(-0.0010196, -0.0196445, 0.998461, -0.0518465)
bones/56/position = Vector3(1.84402e-06, 48.6807, -1.40102e-07)
bones/56/rotation = Quaternion(-0.00995088, -0.000117476, 0.0120376, 0.999878)
bones/57/position = Vector3(7.15256e-07, 47.738, -1.93715e-07)
bones/57/rotation = Quaternion(0.424509, 0.028034, -0.0131511, 0.904894)
bones/58/position = Vector3(2.38419e-07, 17.0182, -5.00679e-06)
bones/58/rotation = Quaternion(0.370479, -0.0410319, 0.0163843, 0.927789)
bones/59/position = Vector3(-3.39001e-06, 6.3573, -2.86847e-07)
bones/60/position = Vector3(-9.35419, -3.41341, 0.473915)
bones/60/rotation = Quaternion(0.00109504, -0.0210935, 0.998432, 0.0518389)
bones/61/position = Vector3(-4.52623e-07, 48.6864, -4.84451e-07)
bones/61/rotation = Quaternion(-0.00920019, 0.000107065, -0.0120367, 0.999885)
bones/62/position = Vector3(-4.03076e-06, 47.7419, 3.76254e-07)
bones/62/rotation = Quaternion(0.423059, -0.0281156, 0.0131346, 0.90557)
bones/63/rotation = Quaternion(0.372624, 0.0411087, -0.0165254, 0.926924)

[node name="PlayerInteract" type="Node3D" parent="." node_paths=PackedStringArray("player_controller") groups=["player"]]
script = ExtResource("3_ctvvl")
player_controller = NodePath("..")

[node name="PauseMenu" parent="." instance=ExtResource("4_dqkch")]

[node name="Game Ui" type="Control" parent="." node_paths=PackedStringArray("interact_button_sprite", "follow_button_sprite", "ring_ui_sprite", "dialogue_panel", "dialogue_label", "lock_picking_sprites", "ending_panel")]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.011
offset_right = 3.0
offset_bottom = -0.128052
mouse_filter = 2
script = ExtResource("5_y4r1p")
interact_button_sprite = NodePath("E-Key")
follow_button_sprite = NodePath("F-Key")
ring_ui_sprite = NodePath("Ring Sprite")
dialogue_panel = NodePath("Dialogue Panel")
dialogue_label = NodePath("Dialogue Panel/Dialogue Label")
lock_picking_sprites = NodePath("Lock-Picking-MiniGame")
ending_panel = NodePath("Ending Panel")

[node name="E-Key" type="Sprite2D" parent="Game Ui"]
visible = false
position = Vector2(1067, 563)
scale = Vector2(3, 3)
texture = ExtResource("6_d2wvv")

[node name="F-Key" type="Sprite2D" parent="Game Ui"]
visible = false
position = Vector2(1067, 617)
scale = Vector2(3, 3)
texture = ExtResource("7_3v2ag")

[node name="Ring Sprite" type="Sprite2D" parent="Game Ui"]
visible = false
position = Vector2(46, 49)
scale = Vector2(2, 2)
texture = ExtResource("8_jej6c")

[node name="Dialogue Panel" type="Panel" parent="Game Ui"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 513.0
offset_right = 1012.0
offset_bottom = 635.0

[node name="Dialogue Label" type="Label" parent="Game Ui/Dialogue Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.999
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -4.00708
text = "Some dialogue text goes here. It could be pretty long actually. Blah. Some dialogue text goes here. It could be pretty long actually. Blah. Some dialogue text goes here. It could be pretty long actually. Blah.Some dialogue text goes here. It could be pretty long actually. Blah ."
vertical_alignment = 1
autowrap_mode = 2

[node name="Lock-Picking-MiniGame" type="Control" parent="Game Ui"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Game Ui/Lock-Picking-MiniGame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.65
anchor_top = 1.2
anchor_right = 23.75
anchor_bottom = 14.3
offset_right = -6.10352e-05
offset_bottom = -6.10352e-05

[node name="LockPicking-Key-Hole" type="Sprite2D" parent="Game Ui/Lock-Picking-MiniGame"]
position = Vector2(555, 304)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_f1ej7")

[node name="LockPicking-Disc" type="Sprite2D" parent="Game Ui/Lock-Picking-MiniGame" groups=["lock_picking_disc"]]
position = Vector2(555, 304)
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_oprun")

[node name="Label" type="Label" parent="Game Ui/Lock-Picking-MiniGame"]
layout_mode = 0
offset_left = 176.0
offset_top = 514.0
offset_right = 327.0
offset_bottom = 537.0
text = "Press E to Exit"

[node name="Label2" type="Label" parent="Game Ui/Lock-Picking-MiniGame"]
layout_mode = 0
offset_left = 176.0
offset_top = 481.0
offset_right = 327.0
offset_bottom = 504.0
text = "Press Space to Stop"

[node name="Ending Panel" type="Panel" parent="Game Ui"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.353
anchor_right = 0.644
anchor_bottom = 0.569
offset_left = -10.955
offset_top = -0.215012
offset_right = 0.179932
offset_bottom = 0.304993

[node name="Label" type="Label" parent="Game Ui/Ending Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.991
anchor_bottom = 0.426
offset_left = 8.0
offset_right = -3.95801
offset_bottom = 1.508
text = "Start the wedding? (This will end the game)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Yes Button" type="Button" parent="Game Ui/Ending Panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 81.0
offset_bottom = 103.0
text = "Yes"

[node name="No Button" type="Button" parent="Game Ui/Ending Panel"]
layout_mode = 0
offset_left = 236.0
offset_top = 72.0
offset_right = 285.0
offset_bottom = 103.0
text = "No"

[connection signal="pressed" from="Game Ui/Ending Panel/Yes Button" to="Game Ui" method="end_game_yes_button_pressed"]
[connection signal="pressed" from="Game Ui/Ending Panel/No Button" to="Game Ui" method="end_game_no_button_pressed"]

[editable path="PlayerVisual/skeletalmesh_player"]
